# wakeup-node

./: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yml
src/: lib.rs  main.rs
src/api/: app.rs  error.rs  mod.rs
src/api/v1/: alarm.rs  mod.rs  ping.rs
src/config/: config.rs
src/core/: error.rs  player.rs
