[package]
name = "wakeup_node"
version = "0.1.0"
edition = "2024"

[dependencies]

# <-- ASYNC -->
tokio = { version = "1", features = ["full"] }

# <-- CORE DEPS -->
axum = { version = "0.8", features = ["macros"] }

# <-- UTILS -->
anyhow = "1.0"
config = "0.15"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
